<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rqt_rplidar_plot</name>
  <version>1.0.0</version>
  <description>An rqt plugin to visualize RPLIDAR laser scan data in real-time.</description>
  <maintainer email="dev@example.com">Jules</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>python3-pyqt5</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>rplidar_ros</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>