<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rso2_lidar_scanner</name>
  <version>1.0.0</version>
  <description>
    ROS 2 package to launch the rplidar_ros driver and a subscriber to read scan data.
    โปรเจค ROS 2 สำหรับเปิดใช้งาน rplidar_ros driver และ node สำหรับอ่านข้อมูลการสแกน
  </description>
  <maintainer email="dev@example.com">Jules</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rplidar_ros</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>